# stubs-py

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  bootstrap.sh  pyproject.toml  tasks.py
.github/: dependabot.yaml
.github/workflows/: ci.py.opensource.yaml  ci.yaml
make/: ci.py.Makefile  env.Makefile  env.py.Makefile  release.py.Makefile  setup.py.Makefile  vars.py.Makefile
src/outcome/stubs/: __init__.py  example.py
test/: test_example.py  test_stub.py
